--- a/index.html
+++ b/index.html
@@ -110,53 +110,61 @@
       background-color: #b71c1c;
       transform: scale(1.02);
     }
-    .tabla-secreta {
-      margin-top: 80px;
-      color: white;
+
+    #tabla-container {
       display: none;
-      max-width: 95%;
+      margin-top: 40px;
+      max-width: 1000px;
+      width: 95%;
+      color: white;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      background-color: #1a1a1a;
       font-size: 14px;
     }
     th, td {
-      padding: 6px 10px;
-      border: 1px solid #555;
+      border: 1px solid #888;
+      padding: 8px;
       text-align: left;
     }
     th {
       background-color: #444;
     }
-    .clave-container {
+
+    .botones-accion {
+      display: flex;
+      gap: 10px;
+      margin-top: 15px;
+    }
+
+    .clave-section {
       margin-top: 40px;
       text-align: center;
     }
-    #clave {
+
+    .clave-input {
       padding: 8px;
-      font-size: 14px;
-      width: 220px;
       border-radius: 6px;
-      border: 1px solid #777;
-      background-color: #1e1e1e;
-      color: white;
+      border: 1px solid #666;
+      width: 180px;
+      background-color: #222;
+      color: #fff;
     }
-    #btn-descargar {
-      margin-top: 12px;
-      padding: 6px 12px;
-      font-size: 13px;
+
+    .boton-clave {
+      margin-left: 10px;
+      padding: 8px 12px;
       border-radius: 6px;
       border: none;
-      background-color: #666;
-      color: white;
+      background-color: #444;
+      color: #fff;
       cursor: pointer;
-      display: none;
-      transition: 0.3s;
     }
-    #btn-descargar:hover {
-      background-color: #888;
+
+    .boton-clave:hover {
+      background-color: #666;
     }
   </style>
 </head>
@@ -167,12 +175,11 @@
     </div>
 
     <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
-
     <div class="datetime-box" id="datetime"></div>
 
     <div class="section">
-      <label for="rut-conductor">Ingrese RUT del conductor que ingresa <small>(Formato: 123456789-1)</small></label>
-      <input type="text" id="rut-conductor" placeholder="Ingrese RUT sin puntos y con guion." onblur="buscarDatosConductor()" required />
+      <label for="rut-conductor">RUT del conductor <small>(123456789-1)</small></label>
+      <input type="text" id="rut-conductor" required />
     </div>
 
     <div class="section">
@@ -182,12 +189,12 @@
 
     <div class="section" id="manual-conductor-section" style="display:none;">
       <label for="nombre-manual">Ingrese manualmente nombre del conductor:</label>
-      <input type="text" id="nombre-manual" placeholder="Nombre completo del conductor" />
+      <input type="text" id="nombre-manual" />
     </div>
 
     <div class="section">
-      <label for="numero-equipo">Ingrese Número de Equipo:</label>
-      <input type="text" id="numero-equipo" placeholder="Ej: 51125" onblur="buscarDatosEquipo()" required />
+      <label for="numero-equipo">Número de Equipo:</label>
+      <input type="text" id="numero-equipo" required />
     </div>
 
     <div class="section">
@@ -208,21 +215,19 @@
 
     <div class="section">
       <label for="guardia">Guardia quien fiscaliza:</label>
-      <input type="text" id="guardia" placeholder="Nombre del guardia" required />
+      <input type="text" id="guardia" required />
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
-  <!-- CLAVE Y BOTÓN DESCARGA -->
-  <div class="clave-container">
-    <input type="password" id="clave" placeholder="🔒 Ingrese clave para exportar" />
-    <br>
-    <button id="btn-descargar" onclick="exportarCSV()">⬇ Descargar CSV</button>
+  <div class="clave-section">
+    <input type="password" id="clave" class="clave-input" placeholder="🔒 Ingrese clave" />
+    <button class="boton-clave" onclick="verificarClave()">Ver tabla</button>
   </div>
 
-  <!-- TABLA OCULTA -->
-  <div class="tabla-secreta" id="contenedor-tabla">
+  <div id="tabla-container">
+    <h2>Registros Ingresados</h2>
     <table id="tabla-datos">
       <thead>
         <tr>
@@ -238,98 +243,39 @@
       </thead>
       <tbody></tbody>
     </table>
+
+    <div class="botones-accion">
+      <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
+      <button onclick="limpiarTabla()">🗑 Limpiar tabla</button>
+    </div>
   </div>
 
   <script>
-    const CLAVE_CORRECTA = "26027678";
-
-    document.getElementById("clave").addEventListener("input", function () {
-      const clave = this.value.trim();
-      const boton = document.getElementById("btn-descargar");
-      const tabla = document.getElementById("contenedor-tabla");
-      if (clave === CLAVE_CORRECTA) {
-        boton.style.display = "inline-block";
-        tabla.style.display = "block";
-      } else {
-        boton.style.display = "none";
-        tabla.style.display = "none";
-      }
-    });
-
     function actualizarFechaHora() {
       const now = new Date();
-      const opciones = {
-        weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
-        hour: '2-digit', minute: '2-digit', second: '2-digit'
-      };
-      document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
-    }
-    actualizarFechaHora();
-
-    async function buscarDatosConductor() {
-      const rut = document.getElementById("rut-conductor").value.trim();
-      const contenedor = document.getElementById("datos-conductor");
-      const manualSection = document.getElementById("manual-conductor-section");
-      if (!rut) {
-        contenedor.innerText = "";
-        manualSection.style.display = "none";
-        return;
-      }
-      contenedor.innerText = "Buscando...";
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=personal&id=" + encodeURIComponent(rut));
-        const data = await response.json();
-        if (data.error) {
-          contenedor.innerText = "❌ No encontrado.";
-          manualSection.style.display = "block";
-        } else {
-          contenedor.innerText = data.NOMBRE || "(sin nombre registrado)";
-          manualSection.style.display = "none";
-        }
-      } catch (e) {
-        contenedor.innerText = "❌ Error al consultar.";
-        manualSection.style.display = "block";
-        console.error(e);
-      }
+      document.getElementById("datetime").innerText = now.toLocaleString("es-CL");
     }
 
-    async function buscarDatosEquipo() {
-      const id = document.getElementById("numero-equipo").value.trim();
-      const contenedorFamilia = document.getElementById("familia-equipo");
-      const contenedorStatus = document.getElementById("status-equipo");
-      const contenedorObs = document.getElementById("observaciones-equipo");
-      const alertaIngreso = document.getElementById("alerta-ingreso");
-      if (!id) {
-        contenedorFamilia.innerText = "";
-        contenedorStatus.innerText = "";
-        contenedorObs.innerText = "";
-        alertaIngreso.style.display = "none";
-        return;
-      }
-      contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "Buscando...";
-      alertaIngreso.style.display = "none";
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=equipo&id=" + encodeURIComponent(id));
-        const data = await response.json();
-        if (data.error) {
-          contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ No encontrado";
-        } else {
-          contenedorFamilia.innerText = data.FAMILIA || "(sin dato)";
-          contenedorObs.innerText = data.OBSERVACIONES || "(sin observaciones)";
-          const status = (data["STATUS ✎"] || "").trim().toLowerCase();
-          if (status === "operativo") {
-            contenedorStatus.innerText = "❌ No habilitado para ingreso.";
-            alertaIngreso.style.display = "block";
-          } else {
-            contenedorStatus.innerText = "✅ Sí habilitado para ingreso.";
-            alertaIngreso.style.display = "none";
-          }
-        }
-      } catch (e) {
-        contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ Error";
-        alertaIngreso.style.display = "none";
-        console.error(e);
-      }
+    window.addEventListener("DOMContentLoaded", () => {
+      actualizarFechaHora();
+      const datosGuardados = JSON.parse(localStorage.getItem("tablaDatos")) || [];
+      datosGuardados.forEach(agregarFilaATabla);
+    });
+
+    function agregarFilaATabla(datos) {
+      const tabla = document.querySelector("#tabla-datos tbody");
+      const fila = document.createElement("tr");
+      fila.innerHTML = `
+        <td>${datos.fecha}</td>
+        <td>${datos.rut}</td>
+        <td>${datos.nombre}</td>
+        <td>${datos.equipo}</td>
+        <td>${datos.familia}</td>
+        <td>${datos.habilitado}</td>
+        <td>${datos.observaciones}</td>
+        <td>${datos.guardia}</td>
+      `;
+      tabla.appendChild(fila);
     }
 
     function enviarFormulario() {
@@ -347,40 +293,54 @@
         return;
       }
 
-      const tabla = document.querySelector("#tabla-datos tbody");
-      const fila = document.createElement("tr");
+      const nombreFinal = datosConductor.includes("No encontrado") ? nombreManual : datosConductor;
       const fecha = new Date().toLocaleString("es-CL");
 
-      fila.innerHTML = `
-        <td>${fecha}</td>
-        <td>${rut}</td>
-        <td>${datosConductor.includes("No encontrado") ? nombreManual : datosConductor}</td>
-        <td>${equipo}</td>
-        <td>${familia}</td>
-        <td>${habilitado}</td>
-        <td>${observaciones}</td>
-        <td>${guardia}</td>
-      `;
-      tabla.appendChild(fila);
+      const filaDatos = { fecha, rut, nombre: nombreFinal, equipo, familia, habilitado, observaciones, guardia };
+      agregarFilaATabla(filaDatos);
 
-      alert("✅ Datos registrados localmente.");
+      const datosExistentes = JSON.parse(localStorage.getItem("tablaDatos")) || [];
+      datosExistentes.push(filaDatos);
+      localStorage.setItem("tablaDatos", JSON.stringify(datosExistentes));
+
+      alert("✅ Datos registrados.");
+    }
+
+    function verificarClave() {
+      const clave = document.getElementById("clave").value;
+      if (clave === "26027678") {
+        document.getElementById("tabla-container").style.display = "block";
+      } else {
+        alert("❌ Clave incorrecta.");
+      }
     }
 
     function exportarCSV() {
-      const tabla = document.querySelector("#tabla-datos");
-      let csv = "";
-      for (let fila of tabla.rows) {
-        const datos = Array.from(fila.cells).map(cell => `"${cell.innerText.replace(/"/g, '""')}"`);
-        csv += datos.join(",") + "\n";
-      }
-      const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+      const datos = JSON.parse(localStorage.getItem("tablaDatos")) || [];
+      if (datos.length === 0) return alert("No hay datos para exportar.");
+
+      const filas = [
+        ["Fecha", "RUT", "Nombre", "Equipo", "Familia", "Habilitado", "Observaciones", "Guardia"],
+        ...datos.map(d => [d.fecha, d.rut, d.nombre, d.equipo, d.familia, d.habilitado, d.observaciones, d.guardia])
+      ];
+
+      const csvContent = filas.map(f => f.join(",")).join("\n");
+      const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
       const url = URL.createObjectURL(blob);
-      const enlace = document.createElement("a");
-      enlace.setAttribute("href", url);
-      enlace.setAttribute("download", "ingreso_equipos.csv");
-      document.body.appendChild(enlace);
-      enlace.click();
-      document.body.removeChild(enlace);
+      const link = document.createElement("a");
+      link.href = url;
+      link.setAttribute("download", "registros_ingreso_equipos.csv");
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
+    function limpiarTabla() {
+      if (confirm("¿Estás seguro de borrar todos los datos? Esta acción no se puede deshacer.")) {
+        localStorage.removeItem("tablaDatos");
+        document.querySelector("#tabla-datos tbody").innerHTML = "";
+        alert("🗑 Datos eliminados.");
+      }
     }
   </script>
 </body>
