--- a/index.html
+++ b/index.html
@@ -110,55 +110,6 @@
       background-color: #b71c1c;
       transform: scale(1.02);
     }
-    #tabla-container {
-      display: none;
-      margin-top: 40px;
-      max-width: 1000px;
-      width: 95%;
-      color: white;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 14px;
-    }
-    th, td {
-      border: 1px solid #888;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #444;
-    }
-    .botones-accion {
-      display: flex;
-      gap: 10px;
-      margin-top: 15px;
-    }
-    .clave-section {
-      margin-top: 40px;
-      text-align: center;
-    }
-    .clave-input {
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #666;
-      width: 180px;
-      background-color: #222;
-      color: #fff;
-    }
-    .boton-clave {
-      margin-left: 10px;
-      padding: 8px 12px;
-      border-radius: 6px;
-      border: none;
-      background-color: #444;
-      color: #fff;
-      cursor: pointer;
-    }
-    .boton-clave:hover {
-      background-color: #666;
-    }
   </style>
 </head>
 <body>
@@ -166,12 +117,14 @@
     <div class="logo-wrapper">
       <img class="logo" src="https://raw.githubusercontent.com/acciona-airport/Zarpes-acciona-aero/main/LogoAcciona2.png" alt="Logo Acciona" />
     </div>
+
     <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
+
     <div class="datetime-box" id="datetime"></div>
 
     <div class="section">
-      <label for="rut-conductor">RUT del conductor <small>(123456789-1)</small></label>
-      <input type="text" id="rut-conductor" required onblur="buscarDatosConductor()" />
+      <label for="rut-conductor">Ingrese RUT del conductor que ingresa <small>(Formato: 123456789-1)</small></label>
+      <input type="text" id="rut-conductor" placeholder="Ingrese RUT sin puntos y con guion." onblur="buscarDatosConductor()" required />
     </div>
 
     <div class="section">
@@ -181,12 +134,12 @@
 
     <div class="section" id="manual-conductor-section" style="display:none;">
       <label for="nombre-manual">Ingrese manualmente nombre del conductor:</label>
-      <input type="text" id="nombre-manual" />
+      <input type="text" id="nombre-manual" placeholder="Nombre completo del conductor" />
     </div>
 
     <div class="section">
-      <label for="numero-equipo">Número de Equipo:</label>
-      <input type="text" id="numero-equipo" required onblur="buscarDatosEquipo()" />
+      <label for="numero-equipo">Ingrese Número de Equipo:</label>
+      <input type="text" id="numero-equipo" placeholder="Ej: 51125" onblur="buscarDatosEquipo()" required />
     </div>
 
     <div class="section">
@@ -207,110 +160,101 @@
 
     <div class="section">
       <label for="guardia">Guardia quien fiscaliza:</label>
-      <input type="text" id="guardia" required />
+      <input type="text" id="guardia" placeholder="Nombre del guardia" required />
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
-  <div class="clave-section">
-    <input type="password" id="clave" class="clave-input" placeholder="🔒 Ingrese clave" />
-    <button class="boton-clave" onclick="verificarClave()">Ver tabla</button>
-  </div>
-
-  <div id="tabla-container">
-    <h2>Registros Ingresados</h2>
-    <table id="tabla-datos">
-      <thead>
-        <tr>
-          <th>Fecha</th>
-          <th>RUT</th>
-          <th>Nombre</th>
-          <th>Equipo</th>
-          <th>Familia</th>
-          <th>Habilitado</th>
-          <th>Observaciones</th>
-          <th>Guardia</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <div class="botones-accion">
-      <button onclick="exportarCSV()">⬇️ Exportar CSV</button>
-      <button onclick="limpiarTabla()">🗑 Limpiar tabla</button>
-    </div>
-  </div>
-
   <script>
     const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
+    const URL_POST = "https://script.google.com/macros/s/AKfycbyRA_m595g4Yuo3el8WhxbAG75FdV26wnwv_IFB1B0-e-o7zpj0Ol_n5H8IYo_0KGRc/exec";
 
     function actualizarFechaHora() {
       const now = new Date();
-      document.getElementById("datetime").innerText = now.toLocaleString("es-CL");
+      const opciones = {
+        weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
+        hour: '2-digit', minute: '2-digit', second: '2-digit'
+      };
+      document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
     }
-
-    window.addEventListener("DOMContentLoaded", () => {
-      actualizarFechaHora();
-      const datosGuardados = JSON.parse(localStorage.getItem("tablaDatos")) || [];
-      datosGuardados.forEach(agregarFilaATabla);
-    });
+    actualizarFechaHora();
 
     async function buscarDatosConductor() {
       const rut = document.getElementById("rut-conductor").value.trim();
       const contenedor = document.getElementById("datos-conductor");
       const manualSection = document.getElementById("manual-conductor-section");
 
-      if (!rut) return;
+      if (!rut) {
+        contenedor.innerText = "";
+        manualSection.style.display = "none";
+        return;
+      }
 
       contenedor.innerText = "Buscando...";
+
       try {
-        const res = await fetch(`${URL_GET}?tipo=personal&id=${encodeURIComponent(rut)}`);
-        const data = await res.json();
+        const response = await fetch(`${URL_GET}?tipo=personal&id=${encodeURIComponent(rut)}`);
+        const data = await response.json();
+
         if (data.error) {
           contenedor.innerText = "❌ No encontrado.";
           manualSection.style.display = "block";
         } else {
-          contenedor.innerText = data.NOMBRE || "(sin nombre)";
+          contenedor.innerText = data.NOMBRE || "(sin nombre registrado)";
           manualSection.style.display = "none";
         }
       } catch (e) {
-        contenedor.innerText = "❌ Error.";
+        contenedor.innerText = "❌ Error al consultar.";
         manualSection.style.display = "block";
+        console.error(e);
       }
     }
 
     async function buscarDatosEquipo() {
       const id = document.getElementById("numero-equipo").value.trim();
-      const contFam = document.getElementById("familia-equipo");
-      const contStat = document.getElementById("status-equipo");
-      const contObs = document.getElementById("observaciones-equipo");
-      const alerta = document.getElementById("alerta-ingreso");
+      const contenedorFamilia = document.getElementById("familia-equipo");
+      const contenedorStatus = document.getElementById("status-equipo");
+      const contenedorObs = document.getElementById("observaciones-equipo");
+      const alertaIngreso = document.getElementById("alerta-ingreso");
 
-      if (!id) return;
+      if (!id) {
+        contenedorFamilia.innerText = "";
+        contenedorStatus.innerText = "";
+        contenedorObs.innerText = "";
+        alertaIngreso.style.display = "none";
+        return;
+      }
 
-      contFam.innerText = contStat.innerText = contObs.innerText = "Buscando...";
-      alerta.style.display = "none";
+      contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "Buscando...";
+      alertaIngreso.style.display = "none";
 
       try {
-        const res = await fetch(`${URL_GET}?tipo=equipo&id=${encodeURIComponent(id)}`);
-        const data = await res.json();
+        const response = await fetch(`${URL_GET}?tipo=equipo&id=${encodeURIComponent(id)}`);
+        const data = await response.json();
 
-        contFam.innerText = data.FAMILIA || "(sin dato)";
-        contObs.innerText = data.OBSERVACIONES || "(sin obs.)";
-        const status = (data["STATUS ✎"] || "").toLowerCase();
-
-        if (status === "operativo") {
-          contStat.innerText = "❌ No habilitado para ingreso.";
-          alerta.style.display = "block";
+        if (data.error) {
+          contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ No encontrado";
         } else {
-          contStat.innerText = "✅ Sí habilitado para ingreso.";
+          contenedorFamilia.innerText = data.FAMILIA || "(sin dato)";
+          contenedorObs.innerText = data.OBSERVACIONES || "(sin observaciones)";
+          const status = (data["STATUS ✎"] || "").trim().toLowerCase();
+          if (status === "operativo") {
+            contenedorStatus.innerText = "❌ No habilitado para ingreso.";
+            alertaIngreso.style.display = "block";
+          } else {
+            contenedorStatus.innerText = "✅ Sí habilitado para ingreso.";
+            alertaIngreso.style.display = "none";
+          }
         }
       } catch (e) {
-        contFam.innerText = contStat.innerText = contObs.innerText = "❌ Error";
+        contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ Error";
+        alertaIngreso.style.display = "none";
+        console.error(e);
       }
     }
 
-    function enviarFormulario() {
+    async function enviarFormulario() {
       const rut = document.getElementById("rut-conductor").value.trim();
       const nombreManual = document.getElementById("nombre-manual").value.trim();
       const datosConductor = document.getElementById("datos-conductor").innerText.trim();
@@ -320,71 +264,37 @@
       const observaciones = document.getElementById("observaciones-equipo").innerText.trim();
       const guardia = document.getElementById("guardia").value.trim();
 
-      if (!rut || !equipo || !guardia || (datosConductor.includes("No encontrado") && !nombreManual)) {
-        alert("⚠️ Completa todos los campos obligatorios.");
+      const nombre = datosConductor.includes("No encontrado") ? nombreManual : datosConductor;
+
+      if (!rut || !nombre || !equipo || !guardia) {
+        alert("⚠️ Debes completar todos los campos obligatorios.");
         return;
       }
 
-      const nombreFinal = datosConductor.includes("No encontrado") ? nombreManual : datosConductor;
-      const fecha = new Date().toLocaleString("es-CL");
+      const formData = new FormData();
+      formData.append("rut", rut);
+      formData.append("nombre", nombre);
+      formData.append("equipo", equipo);
+      formData.append("familia", familia);
+      formData.append("habilitado", habilitado);
+      formData.append("observaciones", observaciones);
+      formData.append("guardia", guardia);
 
-      const filaDatos = { fecha, rut, nombre: nombreFinal, equipo, familia, habilitado, observaciones, guardia };
-      agregarFilaATabla(filaDatos);
-
-      const datosExistentes = JSON.parse(localStorage.getItem("tablaDatos")) || [];
-      datosExistentes.push(filaDatos);
-      localStorage.setItem("tablaDatos", JSON.stringify(datosExistentes));
-
-      alert("✅ Datos registrados.");
-    }
-
-    function agregarFilaATabla(datos) {
-      const tabla = document.querySelector("#tabla-datos tbody");
-      const fila = document.createElement("tr");
-      fila.innerHTML = `
-        <td>${datos.fecha}</td>
-        <td>${datos.rut}</td>
-        <td>${datos.nombre}</td>
-        <td>${datos.equipo}</td>
-        <td>${datos.familia}</td>
-        <td>${datos.habilitado}</td>
-        <td>${datos.observaciones}</td>
-        <td>${datos.guardia}</td>
-      `;
-      tabla.appendChild(fila);
-    }
-
-    function verificarClave() {
-      const clave = document.getElementById("clave").value;
-      if (clave === "26027678") {
-        document.getElementById("tabla-container").style.display = "block";
-      } else {
-        alert("❌ Clave incorrecta.");
-      }
-    }
-
-    function exportarCSV() {
-      const datos = JSON.parse(localStorage.getItem("tablaDatos")) || [];
-      if (datos.length === 0) return alert("No hay datos para exportar.");
-      const filas = [
-        ["Fecha", "RUT", "Nombre", "Equipo", "Familia", "Habilitado", "Observaciones", "Guardia"],
-        ...datos.map(d => [d.fecha, d.rut, d.nombre, d.equipo, d.familia, d.habilitado, d.observaciones, d.guardia])
-      ];
-      const csvContent = filas.map(f => f.join(",")).join("\n");
-      const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.setAttribute("download", "registros_ingreso.csv");
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
-    }
-
-    function limpiarTabla() {
-      if (confirm("¿Seguro que quieres borrar todos los datos?")) {
-        localStorage.removeItem("tablaDatos");
-        document.querySelector("#tabla-datos tbody").innerHTML = "";
-        alert("🗑 Tabla vaciada.");
+      try {
+        const res = await fetch(URL_POST, {
+          method: "POST",
+          body: formData
+        });
+        const text = await res.text();
+        if (text.includes("OK")) {
+          alert("✅ Datos enviados correctamente.");
+          location.reload();
+        } else {
+          alert("❌ Error al enviar.");
+        }
+      } catch (e) {
+        alert("❌ Error al conectar con el servidor.");
+        console.error(e);
       }
     }
   </script>
