--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <script>
     const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
-    const URL_POST = "https://script.google.com/macros/s/AKfycby-yYPCDslb9zxW9Zsff8GZT1uweBafjv_I7rbTi-q1_CRE1icbjuFRN4niz70BUJEY/exec";
+    const URL_POST = "https://script.google.com/macros/s/AKfycbxk7fJQNpEPON1GQq-tO9JkouFVmD2HqbrjW-HCMTQLdDU7pA3j1PLihsF1JrQosZbA/exec"; // ACTUALIZADO
 
     function actualizarFechaHora() {
       const now = new Date();
